...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchAnimalActivity">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/all_searched_animals"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:scrollbarSize="5dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/selected_animals_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/no_such_animal"
...
